# minimal-vulkan-compute

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  minimal-vulkan-compute.sublime-project  vcpkg.json
source/: convolution.comp  main.cpp
